RESOLVED FIXED9581
REGRESSION: The new NativeTextArea scrolls to the top when the control is unfocused.
https://bugs.webkit.org/show_bug.cgi?id=9581
Summary REGRESSION: The new NativeTextArea scrolls to the top when the control is unf...
Rosyna
Reported 2006-06-25 13:33:23 PDT
If I have a lot of text In a textarea control, such that it makes the textarea get a scroll bar and I scroll to the bottom of the textarea control, then click on another control (such as a checkbox, radio control, or push button), the textarea scrolls to the top. This seems to be really "jarring". Especially if I'm trying to copy and paste something into the textarea from the webpage I'm commenting on. Since it means I have to scroll all the way down to the bottom again to find the location I was *just* at in order to paste the thing I am going to quote.
Attachments
patch (1.26 KB, patch)
2006-06-29 11:09 PDT, Adele Peterson
andersca: review+
Rosyna
Comment 1 2006-06-25 13:34:46 PDT
This is a test. There should be no line breaks in this comment. This is a test. There should be no line breaks in this comment.This is a test. There should be no line breaks in this comment.This is a test. There should be no line breaks in this comment.This is a test. There should be no line breaks in this comment.This is a test. There should be no line breaks in this comment.This is a test. There should be no line breaks in this comment.This is a test. There should be no line breaks in this comment.This is a test. There should be no line breaks in this comment.
Adele Peterson
Comment 2 2006-06-29 11:09:58 PDT
Adele Peterson
Comment 3 2006-06-29 12:21:45 PDT
Comment on attachment 9096 [details] patch clearing review flag. this isn't quite right.
Adele Peterson
Comment 4 2006-06-29 12:49:16 PDT
That patch fixes some common cases of this problem, but RenderLayer::updateScrollInfoAfterLayout is still sometimes causing the layer to scroll back to the top. I'm not sure I understand this code.... we're calculating a new scroll position (line 1036): int newY = max(0, min(m_scrollY, scrollHeight() - m_object->clientHeight())); where m_scrollY is 26... which seems to be valid, but gets clobbered by this calculation.
Simon Raboczi
Comment 5 2006-07-13 08:18:08 PDT
A more severe (and presumably related) problem with the scrolling of textareas is that touching the scrollbar instantly and reproducibly crashes the browser.
Adele Peterson
Comment 6 2006-07-13 09:28:01 PDT
Simon, please file a new bug about the crash, so we can fix that separately from this issue. Thanks!
David Kilzer (:ddkilzer)
Comment 7 2006-07-15 12:57:51 PDT
This is a regression from production Safari, so adding Regression keyword.  Regressions are P1, and should have a Radar associated with them (adding NeedsRadar).
David Kilzer (:ddkilzer)
Comment 8 2006-07-15 14:50:44 PDT
Bug 9942 may be related to this bug since it exhibits similar behavior.
mitz
Comment 9 2006-09-01 00:48:22 PDT
*** Bug 10670 has been marked as a duplicate of this bug. ***
Jon
Comment 10 2006-10-05 22:06:22 PDT
Highlight scrolling is still crazy as of r16831. Major usability (i.e. testing) problem
Adele Peterson
Comment 11 2006-11-02 20:17:27 PST
Comment on attachment 9096 [details] patch I actually do think this patch is right. The problem I was seeing before is caused by the flexbox double layout bugs. Now that we've moved textareas off of RenderFlexibleBox, this change should fully fix this scrolling problem.
Adele Peterson
Comment 12 2006-11-02 20:18:14 PST
Comment on attachment 9096 [details] patch oh, and of course, I'll update this patch so RenderTextField --> RenderTextControl
Anders Carlsson
Comment 13 2006-11-02 20:26:19 PST
Comment on attachment 9096 [details] patch r=me
Adele Peterson
Comment 14 2006-11-02 20:36:48 PST
Committed revision 17560.
Note You need to log in before you can comment on or make changes to this bug.