LayoutTests:

Reviewed by Anders.

        Test for http://bugs.webkit.org/show_bug.cgi?id=9581
        REGRESSION: The new NativeTextArea scrolls to the top when the control is unfocused.

        * fast/forms/textarea-no-scroll-on-blur-expected.txt: Added.
        * fast/forms/textarea-no-scroll-on-blur.html: Added.

WebCore:

        Reviewed by Anders.

        - Fix for http://bugs.webkit.org/show_bug.cgi?id=9581
        REGRESSION: The new NativeTextArea scrolls to the top when the control is unfocused.

        Test: fast/forms/textarea-no-scroll-on-blur.html

        * rendering/RenderTextControl.cpp: (WebCore::RenderTextControl::forwardEvent):
          On blur, only scroll back to the start for text fields.



Canonical link: https://commits.webkit.org/14763@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@17560 268f45cc-cd09-0410-ab3c-d52691b4dbfc