WebCore/rendering/RenderTextControl.cpp
@@ -423,7 +423,7 @@ void RenderTextControl::forwardEvent(Event* evt)
         RenderObject* innerRenderer = m_div->renderer();
         if (innerRenderer) {
             RenderLayer* innerLayer = innerRenderer->layer();
-            if (innerLayer)
+            if (innerLayer && !m_multiLine)
                 innerLayer->scrollToOffset(style()->direction() == RTL ? innerLayer->scrollWidth() : 0, 0);
         }
     } else
